Tue Feb 15 16:14:23 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/htsearch.cc (setupWords): Fix problem reported by
	D.J. Adams, in which bad_words removal failed on upper-case
	search words.

	* htsearch/Display.cc(setVariables), htcommon/defaults.cc: Added
	build_select_lists attribute, to generate selector menus in forms.
	* htdoc/hts_selectors.html: Added this page to explain this new
	feature, plus other details on select lists in general.
	* htdoc/hts_templates.html: Added relevant links to related attributes
	and selectors documentation.
	* htdoc/attrs.html, cf_by{name,prog}.html: Added relevant explanations
	and links to selectors documentation.

	* htlib/QuotedStringList.cc (Create): fix PR#743, where quoted string
	lists didn't allow embedded quotes of opposite sort in strings
	(e.g. "'" or '"'), and fix to avoid overrunning end of string
	if it ends with backslash.

	* htcommon/WordList.cc (valid_word): Applied Marc Pohl's fix to make
	this 8-bit clean on Solaris.

	* contrib/conv_doc.pl, contrib/parse_doc.pl: Applied Warren Jones's
	changes to these scripts.

	* htdig/PDF.cc (parseNonTextLine): Fix bogus escape sequences
	around Title parsing.  (Fixes PR#740)

	* htsearch/Display.cc (display, displaySyntaxError),
	htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html,
	htcommon/defaults.cc: Add new attribute "nph" to send out
	non-parsed headers for servers that do not supply HTTP headers on
	CGI output (e.g. IIS).	If nph is set, send out HTTP OK header,
	as suggested by Matthew Daniel <mdaniel@scdi.com> (PR#727)

	* htdig/Document.cc (getdate): avoid strftime() altogether on
	filled-in tm structure, to avoid recurring segfault problems. (PR#734)

	* htlib/strptime.cc (mystrptime): Use Warren Jones's fix to deal
	with a web server that returns dates with a two digit year field.
	(Fixes PR#770)

	* htdig/HTML.cc (HTML, parse, do_tag), htcommon/defaults.cc,
	htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html: