@@ -3,7 +3,7 @@
 //
 // Implementation of Retriever
 //
-// $Id: Retriever.cc,v 1.36.2.17 1999/12/03 18:11:02 grdetil Exp $
+// $Id: Retriever.cc,v 1.36.2.18 2000/02/15 22:42:20 grdetil Exp $
 //
 
 #include "Retriever.h"
@@ -139,10 +139,10 @@ Retriever::Initial(char *list, int from)
 	{
 	    String robotsURL = "http://";
 	    robotsURL << u.host() << "/robots.txt";
-	    String *localRobotsFile = GetLocal(robotsURL.get());
-	    server = new Server(u.host(), u.port(), localRobotsFile);
+	    StringList *localRobotsFiles = GetLocal(robotsURL.get());
+	    server = new Server(u.host(), u.port(), localRobotsFiles);
 	    servers.Add(u.signature(), server);
-	    delete localRobotsFile;
+	    delete localRobotsFiles;
 	}
 	else if (from && visited.Exists(url)) 
 	{
@@ -402,12 +402,12 @@ Retriever::parse_url(URLRef &urlRef)
     // Retrive document, first trying local file access if possible.
     Document::DocStatus status;
     server = (Server *) servers[url.signature()];
-    String *local_filename = GetLocal(url.get());
-    if (local_filename)
+    StringList *local_filenames = GetLocal(url.get());
+    if (local_filenames)
     {  
         if (debug > 1)
-	    cout << "Trying local file " << *local_filename << endl;
-        status = doc->RetrieveLocal(date, *local_filename);
+	    cout << "Trying local files" << endl;
+        status = doc->RetrieveLocal(date, local_filenames);
         if (status == Document::Document_not_local)
         {
 	    if (local_urls_only)
@@ -421,7 +421,7 @@ Retriever::parse_url(URLRef &urlRef)
 	    else
 		status = Document::Document_no_server;
         }
-        delete local_filename;
+        delete local_filenames;
     }
     else if (server && !server->IsDead())
         status = doc->RetrieveHTTP(date);
@@ -747,16 +747,17 @@ Retriever::IsValidURL(char *u)
 
 
 //*****************************************************************************
-// String* Retriever::GetLocal(char *url)
-//   Returns a string containing the (possible) local filename
+// StringList* Retriever::GetLocal(char *url)
+//   Returns a list of strings containing the (possible) local filenames
 //   of the given url, or 0 if it's definitely not local.
-//   THE CALLER MUST FREE THE STRING AFTER USE!
+//   THE CALLER MUST FREE THE STRINGLIST AFTER USE!
 //
-String*
+StringList*
 Retriever::GetLocal(char *url)
 {
     static StringList *prefixes = 0;
     static StringList *paths = 0;
+    static StringList *defaultdocs = 0;
 
     //
     // Initialize prefix/path list if this is the first time.
@@ -766,6 +767,7 @@ Retriever::GetLocal(char *url)
     {
     	prefixes = new StringList();
 	paths = new StringList();
+	defaultdocs = new StringList();
 
 	String t = config["local_urls"];
 	char *p = strtok(t, " \t");
@@ -782,12 +784,21 @@ Retriever::GetLocal(char *url)
             paths->Add(path);
 	    p = strtok(0, " \t");
 	}
+	t = config["local_default_doc"];
+	p = strtok(t, " \t");
+	while (p)	
+	{
+	    defaultdocs->Add(p);
+	    p = strtok(0, " \t");
+	}
+	if (defaultdocs->Count() == 0)
+	    delete defaultdocs;
     }
 
     // Check first for local user...
     if (strchr(url, '~'))
     {
-	String *local = GetLocalUser(url);
+	StringList *local = GetLocalUser(url, defaultdocs);
 	if (local)
 	    return local;
     }
@@ -797,6 +808,7 @@ Retriever::GetLocal(char *url)
         return 0;
     
     String *prefix, *path;
+    StringList *local_names = new StringList();
     prefixes->Start_Get();
     paths->Start_Get();
     while ((prefix = (String*) prefixes->Get_Next()))
@@ -807,24 +819,36 @@ Retriever::GetLocal(char *url)
 	    int l = strlen(url)-prefix->length()+path->length()+4;
 	    String *local = new String(*path, l);
 	    *local += &url[prefix->length()];
-	    if (local->last() == '/' && config["local_default_doc"] != "")
-	      *local += config["local_default_doc"];
-	    return local;
+	    if (local->last() == '/' && defaultdocs) {
+	      defaultdocs->Start_Get();
+	      while (String *defaultdoc = (String *)defaultdocs->Get_Next()) {
+		String *localdefault = new String(*local, local->length()+defaultdoc->length()+1);
+		localdefault->append(*defaultdoc);
+		local_names->Add(localdefault);
+	      }
+	      delete local;
+	    }
+	    else
+	      local_names->Add(local);
 	}	
     }
+    if (local_names->Count() > 0)
+        return local_names;
+
+    delete local_names;
     return 0;
 }
 
 
 //*****************************************************************************
-// String* Retriever::GetLocalUser(char *url)
-//   If the URL has ~user part, returns a string containing the
-//   (possible) local filename of the given url, or 0 if it's
+// StringList* Retriever::GetLocalUser(char *url, StringList *defaultdocs)
+//   If the URL has ~user part, return a list of strings containing the
+//   (possible) local filenames of the given url, or 0 if it's
 //   definitely not local.
-//   THE CALLER MUST FREE THE STRING AFTER USE!
+//   THE CALLER MUST FREE THE STRINGLIST AFTER USE!
 //
-String*
-Retriever::GetLocalUser(char *url)
+StringList*
+Retriever::GetLocalUser(char *url, StringList *defaultdocs)
 {
     static StringList *prefixes = 0, *paths = 0, *dirs = 0;
     static Dictionary home_cache;
@@ -882,6 +906,7 @@ Retriever::GetLocalUser(char *url)
     paths->Start_Get();
     dirs->Start_Get();
     String *prefix, *path, *dir;
+    StringList *local_names = new StringList();
     while ((prefix = (String*) prefixes->Get_Next()))
     {
         path = (String*) paths->Get_Next();
@@ -906,7 +931,7 @@ Retriever::GetLocalUser(char *url)
 	    if (home)
 	        *local += *home;
 	    else
-	        return 0;
+	        continue;
 	}
 	else
 	{
@@ -915,10 +940,23 @@ Retriever::GetLocalUser(char *url)
 	}
 	*local += *dir;
 	*local += rest;
-	if (local->last() == '/' && config["local_default_doc"] != "")
-	  *local += config["local_default_doc"];
-	return local;
+	if (local->last() == '/' && defaultdocs) {
+	  defaultdocs->Start_Get();
+	  while (String *defaultdoc = (String *)defaultdocs->Get_Next()) {
+	    String *localdefault = new String(*local, local->length()+defaultdoc->length()+1);
+	    localdefault->append(*defaultdoc);
+	    local_names->Add(localdefault);
+	  }
+	  delete local;
+	}
+	else
+	  local_names->Add(local);
     }
+
+    if (local_names->Count() > 0)
+        return local_names;
+
+    delete local_names;
     return 0;
 }
 
@@ -933,7 +971,7 @@ Retriever::IsLocalURL(char *url)
 {
     int ret;
 
-    String *local_filename = GetLocal(url);
+    StringList *local_filename = GetLocal(url);
     ret = (local_filename != 0);
     delete local_filename;
 
@@ -1174,7 +1212,7 @@ Retriever::got_href(URL &url, char *description)
 		    //
 		    String robotsURL = "http://";
 		    robotsURL << url.host() << "/robots.txt";
-		    String *localRobotsFile = GetLocal(robotsURL.get());
+		    StringList *localRobotsFile = GetLocal(robotsURL.get());
 		    server = new Server(url.host(), url.port(), localRobotsFile);
 		    servers.Add(url.signature(), server);
 		    delete localRobotsFile;
@@ -1307,7 +1345,7 @@ Retriever::got_redirect(char *new_url, DocumentRef *old_ref)
 		    //
 		    String robotsURL = "http://";
 		    robotsURL << url.host() << "/robots.txt";
-		    String *localRobotsFile = GetLocal(robotsURL.get());
+		    StringList *localRobotsFile = GetLocal(robotsURL.get());
 		    server = new Server(url.host(), url.port(), localRobotsFile);
 		    servers.Add(url.signature(), server);
 		    delete localRobotsFile;
